[package]
name = "challenge-harder"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std", "async-await"] }
prost = "0.14.4"
prost-types = "0.14.4"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1.52.3", features = [
  "macros",
  "rt",
  "sync",
  "test-util",
  "time",
] }
tower = { version = "0.5", features = ["util"] }
turmoil = "0.7.2"

[build-dependencies]
prost-build = "0.14.4"
