[package]
name = "live-server"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
prometheus = "0.14.0"
prost = "0.14.3"
redis = { version = "1.0.5", features = ["tokio-comp", "tokio-rustls-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

[build-dependencies]
prost-build = "0.14.3"
