[package]
name = "live-server"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
prometheus = "0.14.0"
pin-project-lite = "0.2"
prost = "0.14.3"
redis = { version = "1.0.5", features = ["tokio-comp", "tokio-rustls-comp"] }
rustls = { version = "0.23", default-features = false, features = [ "aws-lc-rs" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
bytes = "1.11.1"

[build-dependencies]
prost-build = "0.14.3"
